# incorta-nexus-custom

./: .dockerignore  .gitignore  AI_MODEL_FIXES.md  Dockerfile  TESTING_GUIDE.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  main_websocket.py  pyproject.toml  requirements.txt  test_websocket_client.html  upload_files.py
Frontend/: .dockerignore  .env.docker  Dockerfile  docker-compose.yml  index.html  nginx.conf  nginx.frontend.conf  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/: AuthForm.tsx  ChatHeader.tsx  ChatInput.tsx  ChatInterface.tsx  ConnectionStatus.tsx  FileUpload.tsx  FullScreenChatInterface.less  FullScreenChatInterface.tsx  IntlProviderWrapper.tsx  MessageBubble.tsx  MessageList.tsx  ModelSelector.tsx  ThinkingIndicator.tsx  ToolCallDisplay.tsx  ToolExecutionTab.tsx  ToolResultDisplay.tsx
Frontend/src/components/CopilotChatWindow/: CopilotChatWindow.less  CopilotChatWindow.tsx
Frontend/src/components/CopilotChatWindow/ChatContainer/: ChatContainer.less  ChatContainer.tsx
Frontend/src/components/CopilotChatWindow/ChatIntro/: ChatIntro.tsx
Frontend/src/components/CopilotChatWindow/ChatLayoutToggleButton/: ChatLayoutToggleButton.tsx
Frontend/src/components/CopilotChatWindow/ChatPrompt/: ChatPrompt.less  (+1 more)
Frontend/src/config/: index.ts
Frontend/src/contexts/: ChatContext.tsx  ThemeContext.tsx
Frontend/src/hooks/: useToolExecutions.ts
Frontend/src/pages/: Index.tsx
Frontend/src/styles/: variables.less
web_socket/: Dockerfile  client.py  logger.py  requirements.txt
(+3 files in other folders)
